--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bootstrap demo</title>
+    <title>Cashier</title>
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -21,7 +21,77 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg">
+      <div class="container cashier-navbar">
+        <a class="navbar-brand" href="#">Cashier</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Features</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Pricing</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Stories</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Plugins</a>
+            </li>
+          </ul>
+          <ul class="navbar-nav mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="btn btn-secondary" href="#">My Account</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <!-- End Navbar -->
+
+    <!-- hero section -->
+    <div class="hero mt-70">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-5 microcopy align-self-center">
+            <div class="badge mb-20">
+              <img src="img/icon_secure.svg" alt="icon secure" />
+              <p class="small-copy">We won 180 secure-system award</p>
+            </div>
+            <h1 class="big-header mb-10">
+              Secure Way to <br />
+              Make a Payment
+            </h1>
+            <p class="primary-copy mb-30">
+              Lorem dolor finance easy transactions with <br />
+              a great system that centralized normally.
+            </p>
+            <a href="#" class="btn btn-primary mr-10">Get Started</a>
+            <a href="#" class="btn btn-secondary">Read Stories</a>
+          </div>
+          <div class="col-lg-7">
+            <img
+              src="img/banner_header.png"
+              class="img-fluid"
+              alt="img header"
+            />
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- end hero section -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
