--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="row">
           <div class="col-lg-5 microcopy align-self-center">
             <div class="badge mb-20">
-              <img src="img/icon_secure.svg" alt="icon secure" />
+              <img src="img/icons/icon_secure.svg" alt="icon secure" />
               <p class="small-copy">We won 180 secure-system award</p>
             </div>
             <h1 class="big-header mb-10">
@@ -92,6 +92,95 @@
       </div>
     </div>
     <!-- end hero section -->
+
+    <!-- section companies -->
+    <section class="companies mt-70">
+      <div class="container">
+        <div class="row text-center">
+          <div class="col-lg-12">
+            <h3 class="medium-header mb-10">Trusted by Global Leaders</h3>
+            <p class="primary-copy mb-30">
+              Dollar easy report and transaction growth
+            </p>
+          </div>
+        </div>
+      </div>
+      <!-- carousel right -->
+      <div class="carousel mb-30">
+        <div class="carousel-wrapper">
+          <div class="card-brand mr-30">
+            <img src="img/logo/apple.png" class="logo" alt="logo apple" />
+          </div>
+          <div class="card-brand mr-30">
+            <img src="img/logo/google.png" class="logo" alt="logo apple" />
+          </div>
+          <div class="card-brand mr-30">
+            <img src="img/logo/spotify.png" class="logo" alt="logo apple" />
+          </div>
+          <div class="card-brand mr-30">
+            <img src="img/logo/google.png" class="logo" alt="logo apple" />
+          </div>
+          <div class="card-brand mr-30">
+            <img src="img/logo/subway.png" class="logo" alt="logo apple" />
+          </div>
+        </div>
+        <div class="carousel-wrapper">
+          <div class="card-brand mr-30">
+            <img src="img/logo/apple.png" class="logo" alt="logo apple" />
+          </div>
+          <div class="card-brand mr-30">
+            <img src="img/logo/google.png" class="logo" alt="logo apple" />
+          </div>
+          <div class="card-brand mr-30">
+            <img src="img/logo/spotify.png" class="logo" alt="logo apple" />
+          </div>
+          <div class="card-brand mr-30">
+            <img src="img/logo/google.png" class="logo" alt="logo apple" />
+          </div>
+          <div class="card-brand mr-30">
+            <img src="img/logo/subway.png" class="logo" alt="logo apple" />
+          </div>
+        </div>
+      </div>
+      <!-- carousel left -->
+      <div class="carousel-left">
+        <div class="carousel-wrapper-left">
+          <div class="card-brand mr-30">
+            <img src="img/logo/subway.png" class="logo" alt="logo apple" />
+          </div>
+          <div class="card-brand mr-30">
+            <img src="img/logo/spotify.png" class="logo" alt="logo apple" />
+          </div>
+          <div class="card-brand mr-30">
+            <img src="img/logo/kfc.png" class="logo" alt="logo apple" />
+          </div>
+          <div class="card-brand mr-30">
+            <img src="img/logo/dunkin.png" class="logo" alt="logo apple" />
+          </div>
+          <div class="card-brand mr-30">
+            <img src="img/logo/subway.png" class="logo" alt="logo apple" />
+          </div>
+        </div>
+        <div class="carousel-wrapper-left">
+          <div class="card-brand mr-30">
+            <img src="img/logo/google.png" class="logo" alt="logo apple" />
+          </div>
+          <div class="card-brand mr-30">
+            <img src="img/logo/spotify.png" class="logo" alt="logo apple" />
+          </div>
+          <div class="card-brand mr-30">
+            <img src="img/logo/kfc.png" class="logo" alt="logo apple" />
+          </div>
+          <div class="card-brand mr-30">
+            <img src="img/logo/dunkin.png" class="logo" alt="logo apple" />
+          </div>
+          <div class="card-brand mr-30">
+            <img src="img/logo/subway.png" class="logo" alt="logo apple" />
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- end section companies -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
