--- a/index.html
+++ b/index.html
@@ -181,6 +181,109 @@
       </div>
     </section>
     <!-- end section companies -->
+
+    <!--features section -->
+    <section class="features mt-70">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6">
+            <h3 class="medium-header mb-10">Key Features</h3>
+            <p class="primary-copy mb-30">
+              Reliable system growth for companies
+            </p>
+          </div>
+          <div class="col-lg-6 text-end">
+            <a href="#" class="btn btn-secondary">View all</a>
+          </div>
+        </div>
+        <div class="row features-wrapper">
+          <!-- 1st col -->
+          <div class="col-lg-7">
+            <div class="col-lg-12 mb-30">
+              <div class="big-feature-card">
+                <div class="icon">
+                  <img src="img/icons/icon_gfb.png" alt="icon gfb" />
+                </div>
+                <div class="copy">
+                  <h3 class="small-header mb-10">Good for Business</h3>
+                  <p class="primary-copy mb-20">
+                    Business lorem ipsum meet requirements without breaking the
+                    laws and reducing ipsum tax within a couple of days. The
+                    document will be reported automatically by.
+                  </p>
+                  <a href="#" class="text-button">Learn more</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-12">
+              <div class="big-feature-card">
+                <div class="icon">
+                  <img src="img/icons/icon_od.png" alt="icon od" />
+                </div>
+                <div class="copy">
+                  <h3 class="small-header mb-10">Official Documentations</h3>
+                  <p class="primary-copy mb-20">
+                    Business lorem ipsum meet requirements without breaking the
+                    laws and reducing ipsum tax within a couple of days. The
+                    document will be reported automatically by.
+                  </p>
+                  <a href="#" class="text-button">Learn more</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- 2nd col -->
+          <div class="col-lg-5">
+            <div class="col-lg-12 mb-30">
+              <div class="small-feature-card">
+                <div class="icon">
+                  <img src="img/icons/icon_nc.png" alt="icon nc" />
+                </div>
+                <div class="copy">
+                  <h3 class="small-header mb-10">No-Code</h3>
+                  <p class="primary-copy">
+                    Built for non tech savvy to achieve more results in the less
+                    efforts dolor.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-12 mb-30">
+              <div class="small-feature-card">
+                <div class="icon">
+                  <img src="img/icons/icon_p.png" alt="icon p" />
+                </div>
+                <div class="copy">
+                  <h3 class="small-header mb-10">Payment</h3>
+                  <p class="primary-copy">
+                    Built for non tech savvy to achieve more results in the less
+                    efforts dolor.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-12 mb-30">
+              <div class="small-feature-card">
+                <div class="icon">
+                  <img src="img/icons/icon_a.png" alt="icon a" />
+                </div>
+                <div class="copy">
+                  <h3 class="small-header mb-10">Analytics</h3>
+                  <p class="primary-copy">
+                    Built for non tech savvy to achieve more results in the less
+                    efforts dolor.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--end features section -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
