--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,300;9..40,400;9..40,500;9..40,600;9..40,700&family=Space+Grotesk:wght@300;400;500;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,300;9..40,400;9..40,500;9..40,600;9..40,700&display=swap"
       rel="stylesheet"
     />
     <!-- bootsrap 5 -->
@@ -284,6 +284,93 @@
       </div>
     </section>
     <!--end features section -->
+
+    <!-- booking section -->
+    <section class="booking mt-70">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h3 class="medium-header mb-10">Book a Demo</h3>
+            <p class="primary-copy mb-30">
+              We will show you our product amazing
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-10 offset-lg-1">
+            <div class="row">
+              <div class="col-lg-6">
+                <img
+                  src="img/i_booking.png"
+                  class="img-fluid"
+                  alt="illustration bookig"
+                />
+              </div>
+              <div class="col-lg-6 booking-form align-self-center">
+                <!-- form -->
+                <form action="">
+                  <div class="mb-16">
+                    <input
+                      placeholder="Your name"
+                      type="text"
+                      name="name"
+                      id=""
+                      class="form-control"
+                    />
+                  </div>
+                  <div class="mb-16">
+                    <input
+                      placeholder="Email address"
+                      type="email"
+                      name="email_address"
+                      id=""
+                      class="form-control"
+                    />
+                  </div>
+                  <!-- select -->
+                  <div class="mb-16">
+                    <select name="" id="" class="form-select">
+                      <option value="0">Select your purpose</option>
+                      <option value="Payment">Payment integration</option>
+                      <option value="api">APIs development</option>
+                      <option value="sdk">SDK flutter</option>
+                    </select>
+                  </div>
+                  <!-- textarea -->
+                  <div class="mb-30">
+                    <textarea
+                      placeholder="Write your message"
+                      name=""
+                      id=""
+                      cols="30"
+                      rows="5"
+                      class="form-control"
+                    ></textarea>
+                  </div>
+                  <button class="btn btn-primary w-100">Get started</button>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- end booking section -->
+
+    <!-- footer -->
+    <div class="footer mt-70">
+      <div class="container">
+        <div class="p-4">
+          <p class="text-center">
+            © 2023. Created by
+            <a href="https://instagram.com/rifkyyalamsyah" target="_blank"
+              >Rifky Alamsyah</a
+            >
+          </p>
+        </div>
+      </div>
+    </div>
+    <!-- end footer -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
