add intergration form with google form

--- a/index.html
+++ b/index.html
@@ -308,46 +308,60 @@
               </div>
               <div class="col-lg-6 booking-form align-self-center">
                 <!-- form -->
-                <form action="">
+                <form
+                  action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSd13rxmA58jfhiugLE18gMclMpCKSbZzgGWD7rANk6ATSo7bA/formResponse"
+                >
                   <div class="mb-16">
                     <input
                       placeholder="Your name"
                       type="text"
-                      name="name"
-                      id=""
+                      name="entry.681761835"
+                      id="entry.681761835"
                       class="form-control"
+                      required
                     />
                   </div>
                   <div class="mb-16">
                     <input
                       placeholder="Email address"
                       type="email"
-                      name="email_address"
+                      name="entry.1104720243"
                       id=""
                       class="form-control"
+                      required
                     />
                   </div>
                   <!-- select -->
                   <div class="mb-16">
-                    <select name="" id="" class="form-select">
+                    <select
+                      name="entry.1625325178"
+                      id="entry.1625325178"
+                      class="form-select"
+                      required
+                    >
                       <option value="0">Select your purpose</option>
-                      <option value="Payment">Payment integration</option>
-                      <option value="api">APIs development</option>
-                      <option value="sdk">SDK flutter</option>
+                      <option value="Payment integration">
+                        Payment integration
+                      </option>
+                      <option value="APIs development">APIs development</option>
+                      <option value="SDK flutter">SDK flutter</option>
                     </select>
                   </div>
                   <!-- textarea -->
                   <div class="mb-30">
                     <textarea
                       placeholder="Write your message"
-                      name=""
-                      id=""
+                      name="entry.1147472050"
+                      id="entry.1147472050"
                       cols="30"
                       rows="5"
                       class="form-control"
+                      required
                     ></textarea>
                   </div>
-                  <button class="btn btn-primary w-100">Get started</button>
+                  <button type="submit" class="btn btn-primary w-100">
+                    Get started
+                  </button>
                 </form>
               </div>
             </div>
