add text pettern & change option select

--- a/index.html
+++ b/index.html
@@ -319,6 +319,7 @@
                       id="entry.681761835"
                       class="form-control"
                       required
+                      pattern="[a-zA-Z]+"
                     />
                   </div>
                   <div class="mb-16">
@@ -339,7 +340,7 @@
                       class="form-select"
                       required
                     >
-                      <option value="0">Select your purpose</option>
+                      <option selected>Select your purpose</option>
                       <option value="Payment integration">
                         Payment integration
                       </option>
