--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
                       class="form-select"
                       required
                     >
-                      <option selected>Select your purpose</option>
+                      <option selected value="">Select your purpose</option>
                       <option value="Payment integration">
                         Payment integration
                       </option>
