fix bug text pattern

--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                       id="entry.681761835"
                       class="form-control"
                       required
-                      pattern="[a-zA-Z]+"
+                      pattern="[a-zA-Z\s]+"
                     />
                   </div>
                   <div class="mb-16">
