--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
+              <a class="nav-link" href="#features">Features</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Pricing</a>
@@ -81,7 +81,7 @@
               Lorem dolor finance easy transactions with <br />
               a great system that centralized normally.
             </p>
-            <a href="#" class="btn btn-primary mr-10">Get Started</a>
+            <a href="#booking" class="btn btn-primary mr-10">Get Started</a>
             <a href="#" class="btn btn-secondary">Read Stories</a>
           </div>
           <div class="col-lg-7">
@@ -186,7 +186,7 @@
     <!-- end section companies -->
 
     <!--features section -->
-    <section class="features mt-70">
+    <section id="features" class="features mt-70">
       <div class="container">
         <div class="row">
           <div class="col-lg-6">
@@ -289,7 +289,7 @@
     <!--end features section -->
 
     <!-- booking section -->
-    <section class="booking mt-70">
+    <section id="booking" class="booking mt-70">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
@@ -311,8 +311,23 @@
               </div>
               <div class="col-lg-6 booking-form align-self-center">
                 <!-- form -->
+                <!-- redirect to page -->
+                <script type="text/javascript">
+                  var submitted = false;
+                </script>
+                <iframe
+                  name="hiddenConfirm"
+                  id="hiddenConfirm"
+                  style="display: none"
+                  onload="if(submitted){window.location='thx.html';}"
+                ></iframe>
+                <!-- end redirect to page -->
+
                 <form
                   action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSd13rxmA58jfhiugLE18gMclMpCKSbZzgGWD7rANk6ATSo7bA/formResponse"
+                  method="post"
+                  target="hiddenConfirm"
+                  onsubmit="submitted=true"
                 >
                   <div class="mb-16">
                     <input
@@ -403,7 +418,7 @@
           title: 'Success!',
           text: 'Your form has been submitted!',
           icon: 'success',
-          button: 'OK',
+          button: false,
         });
       }
 
