add media query & fix responsive

--- a/index.html
+++ b/index.html
@@ -69,25 +69,27 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-5 microcopy align-self-center">
-            <div class="badge mb-20">
+            <div class="badge d-sm-inline-flex mb-20">
               <img src="img/icons/icon_secure.svg" alt="icon secure" />
               <p class="small-copy">We won 180 secure-system award</p>
             </div>
             <h1 class="big-header mb-10">
-              Secure Way to <br />
+              Secure Way to <br class="d-sm-none" />
               Make a Payment
             </h1>
             <p class="primary-copy mb-30">
               Lorem dolor finance easy transactions with <br />
               a great system that centralized normally.
             </p>
-            <a href="#booking" class="btn btn-primary mr-10">Get Started</a>
-            <a href="#" class="btn btn-secondary">Read Stories</a>
+            <div class="text-center text-sm-start">
+              <a href="#booking" class="btn btn-primary mr-10">Get Started</a>
+              <a href="#" class="btn btn-secondary">Read Stories</a>
+            </div>
           </div>
-          <div class="col-lg-7">
+          <div class="img-hero col-lg-7">
             <img
               src="img/banner_header.png"
-              class="img-fluid"
+              class="img-fluid mt-3"
               alt="img header"
             />
           </div>
@@ -186,10 +188,10 @@
     <!-- end section companies -->
 
     <!--features section -->
-    <section id="features" class="features mt-70">
+    <section id="features" class="features mt-30 pt-5">
       <div class="container">
         <div class="row">
-          <div class="col-lg-6">
+          <div class="col-lg-6 text-sm-center text-lg-start">
             <h3 class="medium-header mb-10">Key Features</h3>
             <p class="primary-copy mb-30">
               Reliable system growth for companies
@@ -199,6 +201,8 @@
             <a href="#" class="btn btn-secondary">View all</a>
           </div>
         </div>
+        <div class="row">
+          <!-- card -->
         <div class="row features-wrapper">
           <!-- 1st col -->
           <div class="col-lg-7">
@@ -209,7 +213,7 @@
                 </div>
                 <div class="copy">
                   <h3 class="small-header mb-10">Good for Business</h3>
-                  <p class="primary-copy mb-20">
+                  <p class="primary-copy mb-sm-20">
                     Business lorem ipsum meet requirements without breaking the
                     laws and reducing ipsum tax within a couple of days. The
                     document will be reported automatically by.
@@ -225,7 +229,7 @@
                 </div>
                 <div class="copy">
                   <h3 class="small-header mb-10">Official Documentations</h3>
-                  <p class="primary-copy mb-20">
+                  <p class="primary-copy mb-sm-20">
                     Business lorem ipsum meet requirements without breaking the
                     laws and reducing ipsum tax within a couple of days. The
                     document will be reported automatically by.
