--- a/thx.html
+++ b/thx.html
@@ -22,6 +22,47 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg">
+      <div class="container cashier-navbar">
+        <a class="navbar-brand" href="#">Cashier</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Features</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Pricing</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Stories</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Plugins</a>
+            </li>
+          </ul>
+          <ul class="navbar-nav mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="btn btn-secondary" href="#">My Account</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <!-- End Navbar -->
+
+    <!-- thx section -->
     <section class="thx mt-70">
       <div class="container">
         <div class="row text-center">
@@ -30,14 +71,38 @@
               src="img/i_booking.png"
               alt="illustration bookig"
               class="img-fluid mb-30"
-              width="200"
+              width="300"
             />
             <h3 class="medium-header mb-10">Submition Confirmed</h3>
-            <p class="primary-copy mb-16">Thank you for your submission, We will contact you soon</p>
+            <p class="primary-copy mb-16">
+              Thank you for your submission, We will contact you soon
+            </p>
             <a href="index.html" class="btn btn-primary">Back to homepage</a>
           </div>
         </div>
       </div>
     </section>
+    <!-- end thx section -->
+
+    <!-- footer -->
+    <div class="footer mt-70 pt-5" style="background-color: #f9fbfc">
+      <div class="container">
+        <div class="p-4">
+          <p class="text-center">
+            © 2023. Created by
+            <a href="https://instagram.com/rifkyyalamsyah" target="_blank"
+              >Rifky Alamsyah</a
+            >
+          </p>
+        </div>
+      </div>
+    </div>
+    <!-- end footer -->
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
