--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           </div>
           <div class="img-hero col-lg-7">
             <img
-              src="img/banner_header.png"
+              src="img/banner_header.webp"
               class="img-fluid mt-3"
               alt="img header"
             />
@@ -308,7 +308,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <img
-                  src="img/i_booking.png"
+                  src="img/i_booking.webp"
                   class="img-fluid"
                   alt="illustration bookig"
                 />
