--- a/thx.html
+++ b/thx.html
@@ -68,7 +68,7 @@
         <div class="row text-center">
           <div class="col-lg-12">
             <img
-              src="img/i_booking.png"
+              src="img/i_booking.webp"
               alt="illustration bookig"
               class="img-fluid mb-30"
               width="300"
